[~] readability fix on h1

--- a/hallownest_bingo/src/style.css
+++ b/hallownest_bingo/src/style.css
@@ -27,6 +27,7 @@ img {
 h1 {
   text-align: center;
   color: var(--lightTxt-L);
+  text-shadow: rgb(0, 0, 0) 0 0 10px;
 }
 
 nav {
